--- a/ex1/package.json
+++ b/ex1/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "knex": "^0.95.7",
     "luxon": "^2.0.1",
     "sqlite3": "^5.0.2"
