--- a/ex1/package.json
+++ b/ex1/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "migrate:make": "knex migrate:make",
     "migrate:run": "knex --knexfile knexfile.ts migrate:latest",
     "seed:make": "knex seed:make",
